welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:9: error: ';' expected but 'return' found.
			} return 5
                          ^caughtSpeeding:19: error: ';' expected but 'return' found.
		}  return 5
                   ^